syntax = "proto3";

package primodproto;

option go_package = "github.com/rickcollette/primodb/primodproto";

enum StatusCode {
    OK = 0;
    FAIL = 1;
}

service PrimoDB {
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Read(ReadRequest) returns (ReadResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message ReadRequest {
    string key = 1;
    string clientId = 2;
    string database = 3; // Added field for the database name
}

message ReadResponse {
    string value = 1;
    string resp_msg = 2;
    StatusCode status_code = 3;
}

message CreateRequest {
    string key = 1;
    string value = 2;
    string clientId = 3;
    string database = 4;
}

message CreateResponse {
    string message = 1;
    string resp_msg = 2;
    StatusCode status_code = 3;
}

message DeleteRequest {
    string key = 1;
    string clientId = 2;
    string database = 3;
}

message DeleteResponse {
    string message = 1;
    string resp_msg = 2;
    StatusCode status_code = 3;
}

message UpdateRequest {
    string key = 1;
    string value = 2;
    string clientId = 3;
    string database = 4;
}

message UpdateResponse {
    string message = 1;
    string resp_msg = 2;
    StatusCode status_code = 3;
}
